--- a/metaHelper_analysis_Synopsis.qmd
+++ b/metaHelper_analysis_Synopsis.qmd
@@ -36,6 +36,8 @@ color_correct = "#009E73"
 color_false =  "#D55E00"
 color_metahelper = "#E8EEF5"
 color_control = "#FFF2E2"
+color_metahelper_high_sat <- "#BBD5FF"  # vivid light blue
+color_control_high_sat    <- "#FFD9A8"  # vivid light peach
 ```
 
 ## Exploratory analysis
@@ -70,7 +72,6 @@ dat_result  %>%
              linewidth = 0.3, colour = "#D9DEE7") +
   geom_vline(data = grid_x, aes(xintercept = x),
              linewidth = 0.3, colour = "#EEF1F6") +
-
   geom_point(aes(color = result_correct)) +
   xlab("Participant ID") +
   ylab("Absolute Result Value") +
@@ -78,7 +79,8 @@ dat_result  %>%
   facet_wrap(~task, scales = "free", ncol = 2) +
   scale_fill_manual(name = "Group",
                     values = c(color_control, color_metahelper)) + 
-  scale_color_manual(values = c(color_correct, color_false)) + 
+  scale_color_manual(values = c(wrong = color_false, correct = color_correct)) + 
+  coord_cartesian(xlim = c(NA, 26)) +
   theme_light()
 
 ggsave("Exploratory_Plot_Result.png", width = 8, height = 10, dpi = 600)
@@ -282,15 +284,25 @@ posterior_samples <- as_draws_array(result_all)
 tidy_samples <- tidy_draws(posterior_samples)
 
 tidy_samples %>%
-  mutate(metaHelper = logit2prob(b_Intercept + b_groupmetaHelper) *100,
-         Control = logit2prob(b_Intercept) * 100) %>%
+  mutate(
+    metaHelper = logit2prob(b_Intercept + b_groupmetaHelper) * 100,
+    Control    = logit2prob(b_Intercept) * 100
+  ) %>%
   select(metaHelper, Control) %>%
   pivot_longer(everything(), names_to = "Group") %>%
+  mutate(Group = factor(Group, levels = c("metaHelper","Control"))) %>%
   ggplot(aes(x = value, fill = Group)) +
   geom_density(alpha = 0.6, color = NA) +
+  scale_fill_manual(
+    name   = "Group",
+    values = c(metaHelper = color_metahelper_high_sat,
+               Control    = color_control_high_sat)
+  ) +
+  guides(fill = guide_legend(override.aes = list(alpha = 1))) +
   xlab("Percentage Correct") +
   theme_light()
 
+ggsave("Result Correct.png", width = 10, height = 5, dpi = 600)
 
 tidy_samples %>%
   mutate(metaHelper = b_Intercept + b_groupmetaHelper,
@@ -311,29 +323,50 @@ plot(result_all)
 
 # Statistical Modelling - Time
 
-
 ```{r}
-group_shading_dat$time <- 0
+# facet-aware grid for the time plot
+grid_y_time <- do.call(rbind, lapply(split(dat_result, dat_result$task), function(df) {
+  rng <- range(df$time, na.rm = TRUE)
+  data.frame(task = unique(df$task)[1], y = pretty(rng, n = 4))
+}))
+grid_x_time <- do.call(rbind, lapply(split(dat_result, dat_result$task), function(df) {
+  rng <- range(df$ID, na.rm = TRUE)
+  data.frame(task = unique(df$task)[1], x = pretty(rng, n = 5))
+}))
 
 dat_result %>%
   mutate(result_correct = as_factor(result_correct) %>%
            recode("0" = "wrong", "1" = "correct")) %>%
   ggplot(aes(x = ID, y = time)) +
-  #first geom_rect is just used to create the legend
-  geom_rect(data = group_shading_dat, aes(xmin = x_min, xmax = x_max, ymin = y_min, ymax = y_max, fill = Group),  alpha = 0.2) +
-  geom_rect(xmin = 0, xmax = 14.5, ymin = 0, ymax = 5000, fill = color_metahelper,  alpha = 0.02) +
-  geom_rect(xmin = 14.5, xmax = 500, ymin = 0, ymax = 5000, fill = "#F79824",  alpha = 0.02) +
+  # legend rects
+  geom_rect(data = group_shading_dat,
+            aes(xmin = x_min, xmax = x_max, ymin = y_min, ymax = y_max, fill = Group),
+            inherit.aes = FALSE) +
+  # background halves
+  geom_rect(xmin = -20, xmax = 14.5, ymin = -2000, ymax = 5000,
+            fill = color_metahelper, inherit.aes = FALSE) +
+  geom_rect(xmin = 14.5, xmax = 500, ymin = -2000, ymax = 5000,
+            fill = color_control, inherit.aes = FALSE) +
+
+  # manual grid (AFTER rects, BEFORE points)
+  geom_hline(data = grid_y_time, aes(yintercept = y),
+             linewidth = 0.3, colour = "#D9DEE7") +
+  geom_vline(data = grid_x_time, aes(xintercept = x),
+             linewidth = 0.3, colour = "#EEF1F6") +
+
+  # points on top
   geom_point(aes(color = result_correct)) +
   facet_wrap(~task, scales = "free", ncol = 2) +
   xlab("Participant ID") +
   ylab("Absolute Result Value") +
   labs(color = "Result") +
   scale_fill_manual(name = "Group",
-                    values = c("#F79824", color_metahelper)) +  
+                    values = c(color_control, color_metahelper)) +
+  scale_color_manual(values = c(wrong = color_false, correct = color_correct)) +
+  coord_cartesian(xlim = c(NA, 26)) +
+  theme_light()
 
-  theme_light() 
-
-ggsave("Exploratory_Plot_Result_Time.png", width = 10, height = 12, dpi = 600)
+ggsave("Exploratory_Plot_Result_Time.png", width = 8, height = 10, dpi = 600)
 
 ```
  
@@ -462,8 +495,13 @@ tidy_samples %>%
   pivot_longer(everything(), names_to = "Group") %>%
   ggplot(aes(x = value, fill = Group)) +
   xlim(c(0, 400)) +
-  geom_density(alpha = 0.6, color = NA) +
+  geom_density(alpha = 0.7, color = NA) +
   xlab("Mean Time per Task in Seconds") +
+  scale_fill_manual(
+    name   = "Group",
+    values = c(metaHelper = color_metahelper_high_sat,
+               Control    = color_control_high_sat)
+  ) +
   theme_light()
 
 ggsave("Result Time.png", width = 10, height = 5, dpi = 600)
@@ -520,6 +558,11 @@ tidy_samples %>%
   pivot_longer(everything(), names_to = "Group") %>%
   ggplot(aes(x = value, fill = Group)) +
   xlim(c(0, 400)) +
+  scale_fill_manual(
+    name   = "Group",
+    values = c(metaHelper = color_metahelper_high_sat,
+               Control    = color_control_high_sat)
+  ) +
   geom_density(alpha = 0.6, color = NA) +
   xlab("Mean Time per Task in Seconds") +
   theme_light()
@@ -664,19 +707,25 @@ tidy_samples_sens_ID <- tidy_draws(result_correct_sens_ID)
 
 tidy_samples_sens_ID %>%
   mutate(
-    # Calculate probability for the control group (the intercept)
-    Control = logit2prob(b_Intercept) * 100,
-    # Calculate probability for the metaHelper group (intercept + effect)
-    metaHelper = logit2prob(b_Intercept + b_groupmetaHelper) * 100
+    metaHelper = logit2prob(b_Intercept + b_groupmetaHelper) * 100,
+    Control    = logit2prob(b_Intercept) * 100
   ) %>%
-  # Keep only the columns we need for the plot
-  select(Control, metaHelper) %>%
-  # Reshape data into a long format for ggplot
-  pivot_longer(everything(), names_to = "Group", values_to = "PercentageCorrect") %>%
-  # Create the plot
-  ggplot(aes(x = PercentageCorrect, fill = Group)) +
-  geom_density(alpha = 0.7, color = NA) +
-  theme_light()
+  select(metaHelper, Control) %>%
+  pivot_longer(everything(), names_to = "Group") %>%
+  mutate(Group = factor(Group, levels = c("metaHelper", "Control"))) %>%
+  ggplot(aes(x = value, fill = Group)) +
+  geom_density(alpha = 0.6, color = NA) +
+  scale_fill_manual(
+    name   = "Group",
+    values = c(metaHelper = color_metahelper_high_sat,
+               Control    = color_control_high_sat)
+  ) +
+  xlab("Percentage Correct") +
+  theme_light() +
+  guides(fill = guide_legend(override.aes = list(alpha = 1)))
+
+ggsave("Result Correct Random Task and Random Participant.png", width = 10, height = 5, dpi = 600)
+
 ```
 
 ## Time
@@ -771,11 +820,16 @@ tidy_samples %>%
   pivot_longer(everything(), names_to = "Group") %>%
   ggplot(aes(x = value, fill = Group)) +
   xlim(c(0, 400)) +
-  geom_density(alpha = 0.6, color = NA) +
+  geom_density(alpha = 0.7, color = NA) +
   xlab("Mean Time per Task in Seconds") +
+  scale_fill_manual(
+    name   = "Group",
+    values = c(metaHelper = color_metahelper_high_sat,
+               Control    = color_control_high_sat)
+  ) +
   theme_light()
 
-ggsave("Result Time.png", width = 10, height = 5, dpi = 600)
+ggsave("Result Time Sens 1.png", width = 10, height = 5, dpi = 600)
 
 
 tidy_samples %>%
@@ -821,11 +875,16 @@ tidy_samples %>%
   pivot_longer(everything(), names_to = "Group") %>%
   ggplot(aes(x = value, fill = Group)) +
   xlim(c(0, 400)) +
-  geom_density(alpha = 0.6, color = NA) +
+  geom_density(alpha = 0.7, color = NA) +
   xlab("Mean Time per Task in Seconds") +
+  scale_fill_manual(
+    name   = "Group",
+    values = c(metaHelper = color_metahelper_high_sat,
+               Control    = color_control_high_sat)
+  ) +
   theme_light()
 
-ggsave("Result Time.png", width = 10, height = 5, dpi = 600)
+ggsave("Result Time Sens 2.png", width = 10, height = 5, dpi = 600)
 
 
 tidy_samples %>%
@@ -958,8 +1017,13 @@ med_df <- tibble(Control = ctrl_med, metaHelper = meta_med) |>
 
 # Plot
 ggplot(med_df, aes(x = MedianSeconds, fill = Group)) +
-  geom_density(alpha = 0.6, color = NA) +
+  geom_density(alpha = 0.7, color = NA) +
   xlab("Posterior median time per task (seconds, population level)") +
+  scale_fill_manual(
+    name   = "Group",
+    values = c(metaHelper = color_metahelper_high_sat,
+               Control    = color_control_high_sat)
+  ) +
   theme_light()
 
 ggsave("Result_Time_Median_Density.png", width = 10, height = 5, dpi = 600)
